<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewAddDataDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAddDataDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task"
            android:inputType="textCapWords"
            android:paddingBottom="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/description"
            android:inputType="textCapWords"
            android:paddingBottom="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTask" />

        <EditText
            android:id="@+id/editTextFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/finish_by"
            android:inputType="textCapWords"
            android:paddingBottom="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/add_new_task"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFinishBy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>